Bug 72481 - [FILEOPEN] [XLSX Import] Regression in displaying font size in text boxes
Summary: [FILEOPEN] [XLSX Import] Regression in displaying font size in text boxes
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.0.0.beta2
Hardware: All All
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:4.2.3 target:4.1.6
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-12-08 14:48 UTC by Andrzej
Modified: 2014-06-04 18:00 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file-mont (89.38 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2013-12-08 14:48 UTC, Andrzej
Details
display text in text box in LO-4.1.3.2 (307.97 KB, image/png)
2013-12-08 14:49 UTC, Andrzej
Details
display text in text box in LO-4.1.4 RC1 (259.58 KB, image/png)
2013-12-08 14:49 UTC, Andrzej
Details
display text in text box in LO-4.2 Beta 2 (463.84 KB, image/png)
2013-12-08 14:50 UTC, Andrzej
Details
Same issue in Impress (54.26 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2014-02-28 23:40 UTC, Björgvin Ragnarsson
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrzej 2013-12-08 14:48:00 UTC
Created attachment 90460 [details]
sample file-mont

LO 4.1.4 RC1 and LO 4.2 Beta 2 don't correctly display the text in text box. 

Open the file "tab 7-8 -Zest_mont_SN Stokowo.xlsx" in LO 4.1.3.2, LO 4.1.4 RC1 and LO 4.2 Beta 2 then you see the difference.
Only LO 4.1.3.2 displays well text in text box.
Comment 1 Andrzej 2013-12-08 14:49:15 UTC
Created attachment 90461 [details]
display text in text box in LO-4.1.3.2
Comment 2 Andrzej 2013-12-08 14:49:50 UTC
Created attachment 90462 [details]
display text in text box in LO-4.1.4 RC1
Comment 3 Andrzej 2013-12-08 14:50:36 UTC
Created attachment 90463 [details]
display text in text box in LO-4.2 Beta 2
Comment 4 Jean-Baptiste Faure 2013-12-08 16:37:58 UTC
Reproducible for me with versions 4.1.5.0+ and 4.2.0.0beta2+ under Ubuntu 13.10 x86-64.
Version 4.0.6 displays the text in the text boxes the same as in https://bugs.freedesktop.org/attachment.cgi?id=90462

Best regards. JBF
Comment 5 Mateusz 2013-12-09 16:29:56 UTC
I confirm bug under Linux Mint 15 x86_64 and WinXP. So it is regression.
Comment 6 Mateusz 2013-12-09 16:36:31 UTC
Why there is shortage of LibreOffice versions? We need 4.1.4 and newer version to mark bugs.

Jean-Baptiste Faure, can we put "regression" word in keyboard field or it is permitted only for developers?
Comment 7 Jean-Baptiste Faure 2013-12-09 21:38:41 UTC
(In reply to comment #6)
> [...] can we put "regression" word in keyboard field or it is
> permitted only for developers?

Yes we can :-)

Best regards. JBF
Comment 8 ribotb 2013-12-13 18:54:36 UTC
I could open this file with LO 4.2.0 beta 1, but I can't with beta 2 !

Bernard Ribot
Comment 9 Kohei Yoshida 2014-02-07 20:04:56 UTC
Hmm... I still see this in the latest from the 4.2 branch, but the master branch build doesn't have this any more.
Comment 10 Björgvin Ragnarsson 2014-02-28 23:40:01 UTC
Created attachment 94924 [details]
Same issue in Impress

Bisecting this issue on the 4.1 branch identifies the following commit as the cause:

commit 34c5218c9a33d136bbb9b1e2f91f0f4557ab3fad
Author: Thorsten Behrens <tbehrens@suse.com>
Date:   Mon Oct 7 11:16:04 2013 +0200

    Fix fdo#70220 Superscript not imported from pptx.


Issue link: https://bugs.freedesktop.org/show_bug.cgi?id=70220

If either the superscript or the subscript button is pressed twice, the text returns to normal.

Attached is a pptx for demonstrating the same issue with Impress.
Comment 11 Commit Notification 2014-03-10 10:45:00 UTC
Björgvin Ragnarsson committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8ad2aec13205d308341da8519e15a3187b633b91&h=libreoffice-4-2

fdo#72481 drawingml import: don't set CharEscapementHeight unconditionally


It will be available in LibreOffice 4.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2014-03-12 19:38:45 UTC
Björgvin Ragnarsson committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0b772a163b2536fc55aa3b4de925119e33af7691&h=libreoffice-4-1

fdo#72481 drawingml import: don't set CharEscapementHeight unconditionally


It will be available in LibreOffice 4.1.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Andrzej 2014-03-17 18:47:57 UTC
Now in LibreOffice 4.2.3 RC1 all work fine. 
Thx
Comment 14 Jean-Baptiste Faure 2014-03-19 05:34:32 UTC
This bug is fixed now. Thank you.