fdo#72481 drawingml import: don't set CharEscapementHeight unconditionally

Commit 840a8573c8cebe67ddd3c9fe106c7dbd789bb334 (Fix fdo#70220
Superscript not imported from pptx., 2013-10-07) made it possible to set
CharEscapementHeight even if moBaseline is not set, but this causes
problems in the docx importer + not necessary, according to the bugdoc;
so just don't do that.

Conflicts:
	sw/qa/extras/ooxmlimport/ooxmlimport.cxx

Commit and message cherry picked from:

commit 798a563db133ebed3876c245459d90ef54ee7c9a
Author: Miklos Vajna <vmiklos@collabora.co.uk>

Change-Id: Ib95ac449bd8fdf6376261ddc86108f0d23f2200e